crates/quench-runtime/tests/spec_fixtures/errors/syntax_error.js
// spec: ECMA-262 sec-static-semantics-early-errors
// expect: error: SyntaxError
// tags: errors, syntax

const x = 1;
const x = 2;
